--- a/million-frontend/src/index.css
+++ b/million-frontend/src/index.css
@@ -14,6 +14,16 @@
 }
 
 .p-toolbar {
-  padding: 1rem 1rem;
+  padding: 1rem 5rem;
   border-radius: 0 !important;
+}
+
+.p-breadcrumb  {
+  padding: .5rem 5rem;
+  border-radius: 0 !important;
+}
+
+.p-paginator {
+  background-color: transparent;
+  border: none;
 }
