--- a/million-frontend/src/index.css
+++ b/million-frontend/src/index.css
@@ -14,17 +14,26 @@
 }
 
 .p-toolbar {
-  padding: 1rem 5rem;
+  padding: 1rem 2.5rem;
   border-radius: 0 !important;
   border: none;
 }
 
 .p-breadcrumb  {
-  padding: .5rem 5rem;
+  padding: .5rem 2.5rem;
   border-radius: 0 !important;
 }
 
 .p-paginator {
   background-color: transparent;
   border: none;
+}
+
+@media (width >= 40rem) {  
+  .p-toolbar {
+    padding: 1rem 5rem;
+  }
+  .p-breadcrumb  {
+    padding: .5rem 5rem;
+  }
 }
